--- a/en/愩/愩.15676.wikitext
+++ b/en/愩/愩.15676.wikitext
@@ -10,37 +10,78 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|s=𫺌}}
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|心|貢|ls=psc|c1=s|c2=p|t1=heart}}.
 
-===Pronunciation===
+===Etymology 1===
+
+====Pronunciation====
 {{zh-pron
 |m=gōng
 |c=gung1
 |mc=y
 |oc=y
-|mn-t=gong5
 |ma=
-|cat=
+|cat=a
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# [[distraught]]; [[upset]]
-# [[scared]]
-# {{lb|zh|Teochew}} [[dizzy]], often from [[fear]]
+# {{zh-hg}} [[distraught]]; [[upset]]
+# {{zh-hg}} [[scared]]
+
+===Etymology 2===
+
+====Pronunciation====
+{{zh-pron
+|m=gòng
+|cat=a
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+===Etymology 3===
+
+====Pronunciation====
+{{zh-pron
+|m=hǒng
+|cat=a
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+===Etymology 4===
+
+====Pronunciation====
+{{zh-pron
+|mn-t=gong5
+|cat=a
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{lb|zh|Teochew}} [[dizzy]]
+# {{lb|zh|Teochew}} [[muddle-headed]]
 
 ====Compounds====
 {{zh-der|頭愩愩}}
 
 ====See also====
-*{{q|Hokkien}} {{zh-l|楞|tr=gông}}
+* {{q|Hokkien}} {{zh-l|楞|gông}}
 
-====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+===References===
+* {{R:yue:Jyutping Database}}
 
 ----
 
