--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -104,7 +104,7 @@ From the {{der|af|nl|-}} 3rd person singular of {{m|nl|hebben}}, which is {{m|nl
 * {{rhymes|nl|ət|ɛt}}
 
 ===Etymology 1===
-From {{inh|nl|dum|dat}}, which was contracted to {{m|dum|'t}} in usual speech. This form was later interpreted as being the same as the neuter pronoun {{m|nl|het}} (etymology 2, see below), which was contracted in the same way. This then led to the modern form/spelling ''het'', which some might see as being unetymological.
+From {{inh|nl|dum|dat}}, which was contracted to {{m|dum|'t}} in usual speech. This form was later interpreted as being the same as the neuter pronoun {{m|nl|het}} (etymology 2, see below), which was contracted in the same way. This then led to the modern merge with ''het'', which some might see as being unetymological.
 
 ====Article====
 {{head|nl|article|g=n}}
