--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -77,6 +77,7 @@ From {{inh|zh|sit-pro|*lwa(ː)j||easy}}. Cognate with {{cog|my|လွယ်||eas
 {{zh-hanzi}}
 
 # [[easy]]; [[simple]]; not [[difficult]]
+#: {{zh-ant|難}}
 # [[gentle]]; [[kind]]
 # [[effortless]]; [[prone]] to
 # [[easily]]; [[effortlessly]]
