--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -306,7 +306,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Finnish: {{t+|fi|ala}}
 * French: {{t+|fr|branche|f}}
 * Georgian: {{t|ka|დარგი}}, {{t|ka|სფერო}}
-* German: {{t+|de|Branche|f}} (of business), {{t+|de|Zweig|m}}, {{t+|de|Gebiet|n}}
+* German: {{t+|de|Branche|f}} (of business), {{t+|de|Zweig|m}}, {{t+|de|Gebiet|n}}, {{t+|de|Wirtschaftszweig|m}}
 * Greek: {{t+|el|κλάδος|m|sc=Grek}}
 * Hungarian: {{t+|hu|üzletág}}, {{t+|hu|szak}}, {{t+|hu|csoport}}
 * Ido: {{t+|io|fako}}
