--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -161,12 +161,13 @@ From {{der|ja|ltc|sort=い|-}} {{ltc-l|意}}.
 
 ===Etymology 1===
 
-===Hanja===
+====Hanja====
 {{ko-hanja|뜻|의}}
 
 # {{hanja form of|의|[[meaning]]}}
 
 ====Compounds====
+{{der-top3|Compounds}}
 * [[意氣]] ([[의기]], uigi) [[spirit]], [[vigor]]
 * [[意圖]] ([[의도]], uido) [[intention]], [[design]]
 * [[意味]] ([[의미]], uimi) [[meaning]], [[significance]]
@@ -182,16 +183,24 @@ From {{der|ja|ltc|sort=い|-}} {{ltc-l|意}}.
 * [[意表]] ([[의표]], uipyo) [[surprise]]
 * [[意向]] ([[의향]], uihyang) [[willing]]ness, [[inclination]], [[view]]
 * [[表意]] ([[표의]], pyoui) [[ideographic]] or [[semantic]] (in contrast to [[phonetic]]) [[representation]]. cf. [[表音]] ([[표음]], ''pyoeum'')
+{{der-bottom}}
 
 ===Etymology 2===
 
-===Hanja===
+====Hanja====
 {{ko-hanja|기억하다|기억할|억}}
 
-# {{hanja form of|억|to [[remember]]}}
+# {{lb|ko|obsolete}} {{alt form|ko|憶||{{hanja form of|억|[[remember]]}}}}
 
 ====See also====
 * {{l|ko|訓}} ([[새기다|새길]]_[[훈]], ''saegil_hun'') [[interpret]], [[translate]], [[explicate]], [[exegesis]]
+
+===Etymology 3===
+
+====Hanja====
+{{ko-hanja|[[한숨]] [[쉬다|쉴]]|희}}
+
+# {{lb|ko|obsolete}} {{alt form|ko|噫||{{hanja form of|희|[[sigh]]}}}}
 
 [[Category:Hanja readings|의]]
 
