--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -15,7 +15,8 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 {{doublet|en|Yisroel}}.
 
 ===Pronunciation===
-* {{enPR|ĭzʹrāəl|ĭzʹrēəl}}; {{IPA|en|/ˈɪzɹeɪəl/|/ˈɪzɹi.əl/}}.
+* {{enPR|ĭzʹrāəl|ĭzʹrēəl}}; {{IPA|en|/ˈɪzɹeɪəl/|/ˈɪzɹi.əl/}}
+*: {{qualifier|Formal and Posh RP}} {{enPR|ĭzʹrāĕl}}; {{IPA|en|/ˈɪzɹeɪel/}}
 *: {{qualifier|In singing also}} {{enPR|ĭzʹrīĕl}}; {{IPA|en|/ˈɪzɹaɪɛl/}}
 * {{audio|en|En-us-Israel.ogg|Audio (US)}}
 
