t+se:[[baján]] t+kl:[[kalleq]] t+lb:[[Dimmer]] t+lb:[[Donner]] t+mt:[[ragħad]] t+hsb:[[hrimanje]] ([[WT:EDIT|Assisted]]) <thunder#59851306>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -121,6 +121,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * German: {{t+|de|Donner|m}}
 * Gothic: {{t|got|𐌸𐌴𐌹𐍈𐍉|f}}
 * Greek: {{t+|el|βροντή|f}}
+* Greenlandic: {{t|kl|kalleq}}
 * Haitian Creole: {{t|ht|loray}}
 * Hausa: {{t|ha|tarnatsa}}
 * Hebrew: {{t+|he|רַעַם|m|tr=ra'am}}
@@ -146,11 +147,13 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Latvian: {{t|lv|pērkons|m}}
 * Limburgish: {{t+|li|dónder|n}}
 * Lithuanian: {{t|lt|griaustinis}}
+* Luxembourgish: {{t|lb|Dimmer|m}}, {{t|lb|Donner|m}}
 * Macedonian: {{t+|mk|гром|m}}
 * Malagasy: {{t+|mg|ampy}}
 {{trans-mid}}
 * Malay: {{t|ms|guruh}}, {{t|ms|guntur}}
 * Malayalam: {{t+|ml|ഇടി}}
+* Maltese: {{t|mt|ragħad|m}}
 * Manchu: {{t|mnc|ᠠᡴᠵᠠᠨ}}
 * Manx: {{t|gv|taarnagh|m}}
 * Maore Comorian: {{t|swb|guguma}}
@@ -162,6 +165,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Mongolian: {{t+|mn|аянга}}
 * Navajo: {{t|nv|iiʼniʼ}}
 * Ngarrindjeri: {{t|nay|munti}}
+* Northern Sami: {{t|se|baján}}
 * Norwegian:
 *: Bokmål: {{t+|nb|torden|m}}
 *: Nynorsk: {{t|nn|tore|f}}
@@ -192,6 +196,8 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Sinhalese: {{t|si|විදුලි කෙටීම}}
 * Slovak: {{t+|sk|hrom|m}}
 * Slovene: {{t+|sl|grom|m}}, {{t|sl|grmenje|n}}
+* Sorbian:
+*: Upper Sorbian: {{t|hsb|hrimanje|n}}
 * Spanish: {{t+|es|trueno|m}}
 * Swahili: {{qualifier|nc 9/10}} {{t+check|sw|radi}}
 * Swedish: {{t+|sv|åska|c}}, {{t|sv|([[åsk]]) [[smäll]]|c}}, {{t+|sv|dunder|c}}
