--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -45,6 +45,9 @@
 ===Compounds===
 {{zh-der|昨暝|昨昏:cha-hng|一昨|今是昨非|昨來|昨兒|昨前|昨夜|昨天|昨日|昨晚|昨非今是}}
 
+===References===
+* {{R:yue:Hanzi}}
+
 ----
 
 ==Japanese==
