--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -116,12 +116,24 @@
 
 ==Korean==
 
-===Hanja===
-{{ko-hanja|hangeul=[[위]], [[왜]]|mr=wi, wae|eumhun=왜나라|ehrv=wae nara|ehmr=wae nara}}
+===Etymology 1===
 
-# ([[유순하다|유순할]] 왜, ''yusunhal-''): [[docile]], [[obedient]]
-# ([[나라]] [[이름]] 왜, ''nara-ireum-''): [[ancient]] [[Japan]], [[Yamato]]
+====Hanja====
+{{ko-hanja|왜나라|왜}}
+
+# {{hanja form of|왜|[[ancient]] [[Japan]], [[Yamato]]}}
 #* 樂浪海中有倭人, 分爲百餘國 &lt;漢書&gt; <ref>新字海, 民衆書林, 서울, 1967, p. 27.</ref>
+
+====Compounds====
+* {{ko-l|왜국||[[ancient]] [[Japan]], [[Yamato]]; {{q|derogatory}} [[Japan]]|倭國}}
+* {{ko-l|왜색|{{q|derogatory}} [[Japanese]] [[style]]|倭色}}
+
+===Etymology 2===
+
+====Hanja====
+{{ko-hanja|유순하다|유순할|위}}
+
+# {{lb|ko|obsolete}} {{hanja form of|위|[[docile]], [[obedient]]}}
 
 ===References===
 <references/>
