--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -155,18 +155,23 @@
 
 ===Etymology 1===
 
-===Hanja===
+====Hanja====
 {{ko-hanja|거짓|가}}
 
-# [[false]], [[fake]]
-
-===Etymology 2===
-
-===Hanja===
-{{ko-hanja|이르다|이를|격}}
+# {{hanja form of|가|[[false]], [[fake]]}}
 
 ====Compounds====
 * {{ko-l|폐가입진|廢假立眞}}
+* {{ko-l|가짜|[[fake]]|[[假]][[짜]]}}
+* {{ko-l|가면|[[mask]]|假面}}
+* {{ko-l|가설|[[hypothesis]]|假說}}
+
+===Etymology 2===
+
+====Hanja====
+{{ko-hanja|이르다|이를|격}}
+
+# {{lb|ko|obsolete}} {{alt form|ko|格||{{hanja form of|격|to [[come]]; to [[arrive]]; to [[go]] to}}}}
 
 ----
 
