--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -408,8 +408,8 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 # {{lb|en|obsolete|transitive}} To [[resent]]; to remember with anger; to [[dislike]].
 #* '''1607''', {{w|William Shakespeare}}, ''[[s: The Tragedy of Antony and Cleopatra|The Tragedy of Antony and Cleopatra]]'', III. iv. 12:
 #*: O, my good lord, / Believe not all; or, if you must believe, / '''Stomach''' not all.
-#* {{rfdatek|en|L'Estrange}}
-#*: The lion began to show his teeth, and to '''stomach''' the affront.
+#* {{RQ:L'Estrange Fables}}
+#*: The Lion began at first to shew his Teeth, and to '''Stomach''' the Affront.
 #* {{RQ:Milton Eikon|passage=The Parliament sit in that body {{...}} to be his counsellors and dictators, though he '''stomach''' it.}}
 # {{lb|en|obsolete|transitive}} To [[turn]] the stomach of; to [[sicken]] or [[repel]].
 
