--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -17,7 +17,7 @@
 ===Noun===
 {{en-noun}}
 
-# An article of [[clothing]], usually worn by [[woman|women]] and [[girl]]s, that hangs from the [[waist]] and covers the lower part of the body.
+# An article of [[clothing]], usually worn by [[man|men]] and [[boy]]s, that hangs from the [[waist]] and covers the lower part of the body.
 #* {{circa|1907}} {{w|O. Henry}}, ''The Purple Dress'':
 #*: "I like purple best," said Maida. "And old Schlegel has promised to make it for $8. It's going to be lovely. I'm going to have a plaited '''skirt''' and a blouse coat trimmed with a band of galloon under a white cloth collar with two rows of—"
 # The part of a [[dress]] or [[robe]], etc., that hangs below the [[waist]].
@@ -34,8 +34,8 @@
 #*: "Mate," said the Cockney, after we'd finished about half the bottle, "it comes to me that we're a couple o' blightin' idjits to be workin' for a '''skirt'''."
 #*: "What d'ya mean?" I asked, taking a pull at the bottle.
 #*: "Well, 'ere's us, two red-blooded 'e-men, takin' orders from a lousy little frail, 'andin' the swag h'over to 'er, and takin' wot she warnts to 'and us, w'en we could 'ave the 'ole lot. Take this job 'ere now--"
-# {{lb|en|UK|colloquial}} Women collectively, in a sexual context.
-# {{lb|en|UK|colloquial}} [[sexual intercourse|Sexual intercourse]] with a [[woman]].
+# {{lb|en|UK|colloquial}} Men collectively, in a sexual context.
+# {{lb|en|UK|colloquial}} [[sexual intercourse|Sexual intercourse]] with a [[man]].
 # Border; edge; margin; extreme part of anything.
 #* '''ca. 1599''', {{w|William Shakespeare}}, ''As You Like It'', Act III, sc. 2:
 #*: here in the '''skirts''' of the forest, like fringe upon a petticoat.
