t+gl:[[contar]] ([[WT:EDIT|Assisted]]) <count#59875308>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -169,6 +169,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * Estonian: {{t|et|lugema}}
 * Finnish: {{t|fi|[[olla]] [[merkitys|merkitystä]]}}
 * French: {{t+|fr|compter}}
+* Galician: {{t+|gl|contar}}
 * German: {{t+|de|zählen}}
 * Greek: {{t+|el|μετρώ}}
 * Haitian Creole: {{t|ht|konte}}
