--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -91,6 +91,7 @@ From {{inh|en|enm|fighten}}, from {{inh|en|ang|feohtan||to fight, combat, strive
 * Czech: {{t+|cs|bojovat}}, {{t|cs|zápasit}}, {{t+|cs|bít|alt=bít se}}
 * Danish: {{t|da|slås}}, {{t|da|kæmpe}}
 * Dutch: {{t+|nl|strijden}}, {{t+|nl|vechten}}, {{t+|nl|kampen}}
+* Egyptian: {{t-egy|ꜥḥꜣ|h=aHA-A24}}
 * Esperanto: {{t|eo|batali}}
 * Estonian: (''without weapons'') {{t|et|kaklema}}, (''with weapons'') {{t|et|võitlema}}
 * Finnish: {{q|without weapons}} {{t+|fi|tapella}}, {{q|with weapons}} {{t+|fi|taistella}}
