--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -87,6 +87,7 @@ From {{inh|zh|sit-pro|*lwa(ː)j||easy}}. Cognate with {{cog|my|လွယ်||eas
 
 ===Etymology 3===
 {{zh-forms|alt=噲}}
+Possible cognate with {{cog|th|กล้วย||easy}}.
 {{rfe|zh}}
 
 ====Pronunciation====
