/* Translations */Added Sicilian <straight#59900701>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -463,6 +463,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 {{trans-mid}}
 * Portuguese: {{t+|pt|reta|f}}
 * Russian: {{t+|ru|пряма́я|f}}
+* Sicilian: {{t+|scn|rittufilu}}
 * Slovak: {{t|sk|rovinka}}
 * Spanish: {{t+|es|derecho}}
 * Swedish: {{t+|sv|raksträcka|c}}, {{t+|sv|raka|c}}
