--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -661,6 +661,26 @@ From the earlier form (name of an older card game) ''biritch'', probably from {{
 
 ----
 
+==Danish==
+
+===Etymology===
+From {{bor|da|en|bridge}}.
+
+===Pronunciation===
+* {{IPA|da|/britsj/|[ˈb̥ʁid̥ɕ]}}
+
+===Noun===
+{{da-noun|n|-}}
+
+# {{l|en|bridge}} {{q|a {{l|en|card game}}}}
+
+====Inflection====
+{{da-decl|n|n=sg}}
+
+[[Category:da:Card games]]
+
+----
+
 ==Dutch==
 
 ===Etymology===
