--- a/en/慃/慃.15702.wikitext
+++ b/en/慃/慃.15702.wikitext
@@ -28,8 +28,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# ({{zh-only|慃𢞡}}) [[perverse]] (behavior)
-# ({{zh-only|慃𢞡}}) [[disagreeable]] (character)
+# {{zh-only|慃𢞡|[[perverse]] (behavior); [[disagreeable]] (character)}}
 
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
