--- a/en/坩/坩.13036.wikitext
+++ b/en/坩/坩.13036.wikitext
@@ -11,6 +11,10 @@
 
 ==Chinese==
 
+===Glyph origin===
+{{Han etym}}
+{{Han compound|土|甘|ls=psc|t1=earth; dirt|c1=s|c2=p}}.
+
 ===Pronunciation 1===
 {{zh-forms|alt=㽍}}
 {{zh-pron
