--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -705,7 +705,8 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 # {{lb|en|archaeology}} A [[truncation]], a context that represents a moment in time when other archaeological [[deposit]]s were removed for the creation of some feature such as a [[ditch]] or [[pit]].
 # A [[haircut]].
 # {{lb|en|graph theory}} The [[partition]] of a [[graph]]’s [[vertex|vertices]] into two subgroups.
-# A string of railway cars coupled together.
+# {{lb|en|rail}} A string of railway cars coupled together.
+#* {{quote-journal|en|year=1960|month=June|title=Talking of Trains: The new Margam yard|journal=Trains Illustrated|page=323|text=The shunter has a lightweight portable radio transmitter by which, as he uncouples an incoming train into '''cuts''' for marshalling, he informs the Traffic Office of the number of wagons in each '''cut''' and its siding; [...].}} 
 # An engraved block or plate; the impression from such an engraving.
 #: {{ux|en|a book illustrated with fine '''cuts'''}}
 # {{lb|en|obsolete}} A common [[workhorse]]; a [[gelding]].
