--- a/en/慊/慊.15709.wikitext
+++ b/en/慊/慊.15709.wikitext
@@ -45,8 +45,9 @@
 
 ====Readings====
 {{ja-readings
-|on=けん, きょう
-|kun=うらむ, あきたりる
+|goon=きょう<けふ, けん<けむ
+|kanon=きょう<けふ, けん<けむ
+|kun=うら-む, あきたりる
 }}
 
 ----
