--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -142,6 +142,7 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 * Irish: {{t+|ga|Frainc|alt=an Fhrainc|f}}
 * Italian: {{t+|it|Francia|f}}
 * Japanese: {{t+|ja|フランス|tr=Furansu}}, {{t+|ja|仏蘭西|tr=Furansu}} {{qualifier|obsolete}}
+* Jarai: {{t|jra|čar Prăng}}
 * Javanese: {{t|jv|Prancis}}
 * Kalenjin: {{t|kln|Frans}}
 * Kamba: {{t|kam|Frans}}
