--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -175,6 +175,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * Indonesian: {{t+|id|menarik}}, {{t+|id|tarik}}
 * Italian: {{t+|it|tirare}}
 * Japanese: {{t+|ja|引く|tr=ひく, hiku}}, {{t|ja|引っ張る|tr=ひっぱる, hipparu|sc=Jpan}}
+* Jarai: {{t|jra|dui }}
 * Kazakh: {{t+|kk|тарту}}, {{t|kk|сүйреу}}
 * Khmer: {{t+|km|ទាញ}}
 * Korean: {{t+|ko|끌다}}, {{t+|ko|뽑다}}
