t+ur:[[المانیہ]] t+pnb:[[جرمنی]] t+pnb:[[المانیہ]] t+pnb:[[جرمن]] ([[WT:EDIT|Assisted]]) <Germany#60066479>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -291,7 +291,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Turkish: {{t+|tr|Almanya}}
 * Turkmen: {{t|tk|Germaniýa}}
 * Ukrainian: {{t+|uk|Німе́ччина|f}}
-* Urdu: {{t|ur|جرمنی|m|tr=jarmanī}}
+* Urdu: {{t|ur|جرمنی|m|tr=jarmanī}}, {{t|ur|المانیہ|tr=almāniya}} {{qualifier|uncommon}}
 * Uyghur: {{t|ug|گېرمانىيە}}
 * Uzbek: {{t+|uz|Olmoniya}}, {{t+|uz|Germaniya}}
 * Venetian: {{t+|vec|Germania|f}}
@@ -307,6 +307,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Welsh: {{t+|cy|Almaen|f|alt=yr Almaen}}
 * West Flemish: {{t|vls|Duutsland|?}}
 * West Frisian: {{t+|fy|Dútslân|n}}
+* Western Panjabi: {{t|pnb|جرمنی|tr=jarmani}} {{qualifier|literally}}, {{t|pnb|المانیہ|tr=almānya}} {{qualifier|uncommon}}, {{t|pnb|جرمن|tr=jarman}} {{qualifier|slang}}
 * Wolof: {{t|wo|Almaañ}}
 * Xhosa: {{t|xh|iJamani|c5}}
 * Yiddish: {{t|yi|דײַטשלאַנד|n}}
