/* Translations */ Added Gothic translation. <choose#60068637>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -72,6 +72,7 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 * Galician: {{t+|gl|escoller}}, {{t+|gl|elixir}}
 * Georgian: {{t|ka|ამორჩევა|sc=Geor}}
 * German: {{t+|de|wählen}}, {{t+|de|auswählen}}
+* Gothic: {{t|got|𐍅𐌰𐌻𐌾𐌰𐌽}}
 * Greek: {{t+|el|διαλέγω}}
 *: Ancient: {{t|grc|[[αἱρέω|αἱρέομαι]]}}, {{t|grc|ἐκλέγω}}
 * Haitian Creole: {{t|ht|chwazi}}
