--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -345,6 +345,7 @@ From {{inh|frm|fro|France}}.
 * {{desc|bor=1|enm|Fraunce}}, {{l|enm|France}}
 ** {{desc|en|France}} {{see desc}}
 ** {{desc|sco|Fraunce}}
+* {{desc|bor=1|br|Frañs}}
 
 ----
 
