--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -8,7 +8,7 @@
 ===Etymology===
 From {{inh|en|enm|stomak}}, from {{der|en|fro|estomac}}, from {{der|en|la|stomachus}}, from {{der|en|grc|στόμαχος}}, from {{m|grc|στόμα||mouth}}.
 
-Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}} from {{m+|ang|maga|t=stomach, maw}}, {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|būc|t=belly, stomach}}, see {{m|en|bucket}}.
+Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|būc|t=belly, stomach}}; largely displaced {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}} from {{m+|ang|maga|t=stomach, maw}}. More at {{m|en|bucket}} and {{m|en|maw}}.
 
 ===Pronunciation===
 * {{IPA|en|/ˈstʌmək/}}
