--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -274,10 +274,14 @@ The {{m|en|Singapore}} sense derives from the pre-[[World War Two]] kanji spelli
 
 ==Korean==
 
+===Etymology===
+From {{der|ko|ltc|-}} {{ltc-l|星|id=1}}. {{hanja-hunmong|셔ᇰ|syeng|天文#상01A}}
+
 ===Hanja===
+{{ko-hanja-search}}
 {{ko-hanja/new|별|성}}
 
-# [[star]], [[planet]]
+# {{hanja form of|성|[[star]], [[planet]]}}
 
 ====Compounds====
 {{der-top3|Compounds}}
@@ -294,6 +298,9 @@ The {{m|en|Singapore}} sense derives from the pre-[[World War Two]] kanji spelli
 * {{ko-l|^해왕성|海王星}}
 * {{ko-l|^명왕성|冥王星}}
 {{der-bottom}}
+
+===References===
+* {{R:hanjadoc|4581}}
 
 ----
 
