--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -173,13 +173,27 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 
 ==Korean==
 
+===Etymology===
+From {{der|ko|ltc|-}} {{ltc-l|春|id=1}}. {{hanja-hunmong|츈|chyun|天文#상01B}}
+
 ===Hanja===
+{{ko-hanja-search}}
 {{ko-hanja|봄|춘}}
 
 # {{hanja form of|춘|[[spring]] {{gloss|season}}}}
 
 ====Compounds====
+{{der-top3|Compounds}}
+* {{ko-l|춘추|春秋}}
+* {{ko-l|입춘|立春}}
+* {{ko-l|청춘|靑春}}
+* {{ko-l|매춘|賣春}}
+* {{ko-l|매춘부|賣春婦}}
 * {{ko-l|사춘기|[[puberty]]|思春期}}
+{{der-bottom}}
+
+===References===
+* {{R:hanjadoc|4583}}
 
 ----
 
