/* Korean */ def from zh <旦#60090455>

--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -86,10 +86,24 @@ Cognate with {{cog|cdm|दारःदो|tr=darʔ.do|t=place of sunrise; in eas
 
 ==Korean==
 
-===Hanja===
-{{ko-hanja|hangeul=[[단]]|eumhun=|rv=dan|mr=tan|y=tan}}
+===Etymology===
+From {{der|ko|ltc|-}} {{ltc-l|旦|id=1}}. {{hanja-hunmong|단〯|tan|天文#상02A}}
 
-# {{rfdef|ko|sort=日01}}
+===Hanja===
+{{ko-hanja-search}}
+{{ko-hanja|아침|단}}
+
+# {{hanja form of|단|[[early]] [[morning]]; [[dawn]]}}
+
+====Compounds====
+{{der-top3|Compounds}}
+* {{ko-l|일단|一旦}}
+* {{ko-l|단석|旦夕}}
+* {{ko-l|단명|旦明}}
+{{der-bottom}}
+
+===References===
+* {{R:hanjadoc|4539}}
 
 ----
 
