--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -221,7 +221,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Volapük: {{t|vo|töt}}
 * Walloon: {{t+|wa|tonire|f}}, {{t+|wa|tonoere|f}}
 * Waray-Waray: {{t|war|dalugdog}}
-* Welsh: {{t+|cy|taran|f}}
+* Welsh: {{t+|cy|taranau|f-p}}, {{t+|cy|tyrfau|f=m-p}}, {{t+|cy|trystau|f=m-p}}
 * West Flemish: {{t|vls|dunder|m}}
 * West Frisian: {{t|fy|tonger}}
 * Westrobothnian: {{t|gmq-bot|Thorn|m}}
@@ -294,7 +294,6 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Telugu: {{t+check|te|ఉరుము}}
 * Thai: {{t-check|th|สายฟ้า}}
 * Tupinambá: {{t-check|tpn|tupã sununga}}
-* Welsh: {{t-check|cy|taranau}}, {{qualifier|peal of thunder}} {{t+check|cy|taran}}, {{t-check|cy|tyrfau}}
 {{trans-bottom}}
 
 ====See also====
