--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -148,14 +148,30 @@ Pictogram ([[象形]]) – pictographic representation of an umbrella
 
 ==Korean==
 
-===Hanja===
-{{ko-hanja|산}}
+===Etymology===
+From {{der|ko|ltc|-}} {{ltc-l|傘|id=1}}. {{hanja-hunmong|산〯|san|器皿}}
 
-# {{rfdef|ko|sort=人10}}
+===Hanja===
+{{ko-hanja-search}}
+{{ko-hanja|우산|산}}
+
+# {{hanja form of|산|[[umbrella]]}}
 
 ====Compounds====
-* [[雨傘]] ({{ko-l|우산}})
-* [[日傘]] ({{ko-l|일산}})
+{{der-top3|Compounds}}
+* {{ko-l|산하|傘下}}
+* {{ko-l|균산|菌傘}}
+* {{ko-l|우산|雨傘}}
+* {{ko-l|양산|陽傘}}
+* {{ko-l|일산|日傘}}
+* {{ko-l|산벌|傘伐}}
+* {{ko-l|산수|傘壽}}
+* {{ko-l|낙하산|落下傘}}
+* {{ko-l|핵우산|核雨傘}}
+{{der-bottom}}
+
+===References===
+* {{R:hanjadoc|479}}
 
 ----
 
