--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -18,15 +18,13 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 [[Image:Cyril_Methodius25K.jpg|right|thumb|160px|A religious icon]]
 
 # An [[image]], [[symbol]], [[picture]], or other [[representation]] usually as an object of religious devotion.
+#: {{syn|en|idol|graven image|q2=pejorative}}
 # {{lb|en|religion|especially|Eastern Christianity}} A type of religious painting portraying a [[saint]] or scene from [[Scripture]], often done on wooden panels.
-# A person or thing that is the best example of a certain profession or some doing.
-#: ''That man is an '''icon''' in the business; he personifies loyalty and good business sense.''
-# {{lb|en|computing}} A small picture that represents something (such as an icon on a computer screen which when clicked performs some function.)
+# {{lb|en|by extension}} A person or thing that is the best example of a certain profession or some doing.
+#: {{syn|en|Thesaurus:exemplar|Thesaurus:model}}
+#: {{ux|en|That man is an '''icon''' in the business; he personifies loyalty and good business sense.}}
+# {{lb|en|graphical user interface}} A small picture that represents something (such as an icon on a computer screen which when clicked performs some function.)
 # {{lb|en|linguistics}} A word, character, or sign whose form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons. See also {{m|en|symbol}} and {{m|en|index}}.
-
-====Synonyms====
-* {{sense|worshipped image}} {{l|en|idol}}, {{l|en|graven image}} {{qualifier|pejorative}}
-* {{sense|exemplar}} ''See'' [[Thesaurus:exemplar]] ''and'' [[Thesaurus:model]]
 
 ====Derived terms====
 * {{l|en|aniconic}}, {{l|en|aniconism}}
