--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -1,12 +1,13 @@
 {{also|iĉon|Icon|ICON}}
 ==English==
-{{wikipedia}}
+[[File:Cyril_Methodius25K.jpg|thumb|A religious icon]]
+[[File:Emptytrash1.svg|thumb|A GUI icon representing deleted items]]
 
 ===Alternative forms===
 * {{l|en|eikon}}, {{l|en|ikon}} {{qualifier|only in sense of religious image}}
 
 ===Etymology===
-From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||likeness, image, portrait}}. Eastern Orthodox Church sense is attested from 1833. Computing sense first recorded in 1982.
+From {{bor|en|la|icon}}, from {{der|en|grc|εἰκών||likeness, image, portrait}}. Eastern Orthodox Church sense is attested from 1833. Computing sense first recorded in 1982.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ˈaɪ.kən/}}
@@ -15,7 +16,6 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 
 ===Noun===
 {{en-noun}}
-[[Image:Cyril_Methodius25K.jpg|right|thumb|160px|A religious icon]]
 
 # An [[image]], [[symbol]], [[picture]], or other [[representation]] usually as an object of religious devotion.
 #: {{syn|en|idol|graven image|q2=pejorative}}
@@ -23,7 +23,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 # {{lb|en|by extension}} A person or thing that is the best example of a certain profession or some doing.
 #: {{syn|en|Thesaurus:exemplar|Thesaurus:model}}
 #: {{ux|en|That man is an '''icon''' in the business; he personifies loyalty and good business sense.}}
-# {{lb|en|graphical user interface}} A small picture that represents something (such as an icon on a computer screen which when clicked performs some function.)
+# {{lb|en|graphical user interface}} A small picture that represents something (such as an icon on a computer screen which when clicked performs some function.) 
 # {{lb|en|linguistics}} A word, character, or sign whose form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons. See also {{m|en|symbol}} and {{m|en|index}}.
 
 ====Derived terms====
@@ -209,6 +209,10 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 * Interlingua: {{t-check|ia|icono}}
 {{trans-mid}}
 {{trans-bottom}}
+
+===Further reading===
+* {{pedia}}
+* {{pedia|icon (computing)}}
 
 ===Anagrams===
 * {{anagrams|en|a=cino|COIN|Coin|Nico|cion|coin|coni}}
