--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -24,7 +24,8 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 #: {{syn|en|Thesaurus:exemplar|Thesaurus:model}}
 #: {{ux|en|That man is an '''icon''' in the business; he personifies loyalty and good business sense.}}
 # {{lb|en|graphical user interface}} A small picture that represents something (such as an icon on a computer screen which when clicked performs some function.) 
-# {{lb|en|linguistics}} A word, character, or sign whose form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons. See also {{m|en|symbol}} and {{m|en|index}}.
+# {{lb|en|linguistics}} A word, character, or sign whose form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons.
+#: {{cot|en|symbol|index}}.
 
 ====Derived terms====
 * {{l|en|aniconic}}, {{l|en|aniconism}}
