t+it:[[discapito]] ([[WT:EDIT|Assisted]]) <cost#60112341>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -289,6 +289,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 * German: {{t+|de|Verlust|m}}, {{t+|de|Ausgaben|f}}
 * Greek: {{t+|el|κόστος|n}}
 * Hungarian: {{t+|hu|ár}}
+* Italian: {{t+|it|discapito}}
 * Japanese: {{t+|ja|代償|tr=[[だいしょう]], daishō}}
 {{trans-mid}}
 * Latvian: {{t|lv|maksa|f}}
