--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -173,6 +173,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Telugu: {{t+|te|కొమ్మ|sc=Telu}}, {{t+|te|శాఖ|sc=Telu}}
 * Thai: {{t+|th|กิ่ง}}
 * Tibetan: {{t|bo|ཡལ་ག}}
+* Tocharian B: {{t-simple|txb|karāk|langname=Tocharian B}}
 * Tok Pisin: {{t+|tpi|han}}
 * Turkish: {{t+|tr|dal}}, {{t+|tr|budak}}
 * Turkmen: {{t|tk|pudak}}
