--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -377,6 +377,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Tajik: {{t+|tg|шикам|sc=Cyrl}}
 * Telugu: {{t+|te|పొట్ట|sc=Telu}}, {{t+|te|కడుపు|sc=Telu}}
 * Thai: {{t+|th|ท้อง}}
+* Tocharian B: {{t-simple|txb|kātso|langname=Tocharian B}}
 * Tok Pisin: {{t+|tpi|bel}}
 * Turkish: {{t+|tr|karın}}
 * Turkmen: {{t|tk|garyn}}
