--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -81,10 +81,27 @@
 
 ==Korean==
 
-===Hanja===
-{{ko-hanja|hangeul=갱|rv=gaeng|mr=kaeng}}
+===Etymology===
+From {{der|ko|ltc|-}} {{ltc-l|坑|id=1}}. {{hanja-hunmong|ᄀᆡᇰ|koyng|雜語}}
 
-# {{rfdef|ko|sort=土04}}
+===Hanja===
+{{ko-hanja-search}}
+{{ko-hanja|구덩이|갱}}
+
+# {{hanja form of|갱|[[pit]]}}
+
+====Compounds====
+{{der-top3|Compounds}}
+* {{ko-l|갱도|坑道}}
+* {{ko-l|갱구|坑口}}
+* {{ko-l|갱목|坑木}}
+* {{ko-l|탄갱|炭坑}}
+* {{ko-l|갱외|坑外}}
+* {{ko-l|분서갱유|焚書坑儒}}
+{{der-bottom}}
+
+===References===
+* {{R:hanjadoc|1733}}
 
 ----
 
