--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -15,36 +15,36 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 [[Image:Plum on tree.jpg|thumb|A plum growing on a plum tree.]]
 {{en-noun}}
 
-# The edible, fleshy [[stone fruit]] of ''[[Prunus domestica]]'', often of a dark red or purple colour.
-# The [[stone-fruit]] tree which bears this fruit, ''[[Prunus domestica]]''.
-# A dark [[bluish]]-[[red]] [[color]]/[[colour]], the colour of some plums.
-#: {{color panel|5F4951}}
-#: {{color panel|web plum|CC99CC}}
-# A [[desirable]] thing.
-# {{lb|en|archaic}} A handsome [[fortune]] or [[property]]; formerly, in [[cant]] language, the sum of £100,000 [[sterling]], or a person possessing it.
-# {{lb|en|dated}} A good or choice thing of its kind, as among appointments, positions, parts of a book, etc.
-#: ''The mayor rewarded his cronies with cushy '''plums''', requiring little work for handsome pay.''
-# A [[raisin]], when used in a pudding or cake.
-# {{lb|en|pejorative}} A [[fool]], [[idiot]].
-# {{lb|en|slang|usually|in the plural}} A [[testicle]].
-# The edible, fleshy stone fruit of several species sharing ''[[Prunus subg. Prunus]]'' with ''Prunus domestica'' including, among others:
-## {{taxlink|Prunus sect. Prunus|section|noshow=1|ver=161009}}
-### ''[[Prunus cerasifera]]'', the [[cherry plum]] or [[myrobalan]]
-### {{taxlink|Prunus salicina|species|noshow=1|ver=161009}} the [[Chinese plum]] or [[Japanese plum]]
-### ''[[Prunus spinosa]]'', the [[sloe]]
-### {{taxlink|Prunus ursina|species|noshow=1|ver=161009}} the {{vern|bear's plum}}
-## {{taxlink|Prunus sect. Prunocerasus|section|noshow=1|ver=161009}} North American plums
-### {{taxlink|Prunus americana|species|noshow=1|ver=161009}}, the {{vern|American plum}}
-### ''[[Prunus angustifolia]]'', the {{vern|Chickasaw plum}} or {{vern|sand plum}}
-### {{taxlink|Prunus hortulana|species|noshow=1|ver=161009}}, the {{vern|hortulan plum}}
-### {{taxlink|Prunus nigra|species|noshow=1|ver=161009}}, the {{vern|Canadian plum}} or {{vern|black plum}}
-### {{taxlink|Prunus rivularis|species|noshow=1|ver=161009}}, the {{vern|creek plum}} or [[hog plum]]
-### ''[[Prunus subcordata]]'', the [[Klamath plum]] or [[Oregon plum]]
-## {{taxlink|Prunus sect. Armeniaca|section|noshow=1|ver=161009}} (better known as [[apricot]]s)
-### ''[[Prunus mume]]'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
-# The [[stone-fruit]] trees which bear these fruits.
-# The fruits of many unrelated trees and shrubs with fruit perceived to resemble plums
-# The trees and shrubs bearing those fruits
+# ''The fruit and its tree.''
+## The edible, fleshy [[stone fruit]] of ''[[Prunus domestica]]'', often of a dark red or purple colour. {{defdate|from 8th c.}}
+## The [[stone-fruit]] tree which bears this fruit, ''[[Prunus domestica]]''. {{defdate|from 8th c.}}
+## The edible, fleshy stone fruit of several species resembling the plum, or the tree from which they grow. {{defdate|from 16th c.}}
+### {{taxlink|Prunus sect. Prunus|section|noshow=1|ver=161009}}
+#### ''[[Prunus cerasifera]]'', the [[cherry plum]] or [[myrobalan]]
+#### {{taxlink|Prunus salicina|species|noshow=1|ver=161009}} the [[Chinese plum]] or [[Japanese plum]]
+#### ''[[Prunus spinosa]]'', the [[sloe]]
+#### {{taxlink|Prunus ursina|species|noshow=1|ver=161009}} the {{vern|bear's plum}}
+### {{taxlink|Prunus sect. Prunocerasus|section|noshow=1|ver=161009}} North American plums
+#### {{taxlink|Prunus americana|species|noshow=1|ver=161009}}, the {{vern|American plum}}
+#### ''[[Prunus angustifolia]]'', the {{vern|Chickasaw plum}} or {{vern|sand plum}}
+#### {{taxlink|Prunus hortulana|species|noshow=1|ver=161009}}, the {{vern|hortulan plum}}
+#### {{taxlink|Prunus nigra|species|noshow=1|ver=161009}}, the {{vern|Canadian plum}} or {{vern|black plum}}
+#### {{taxlink|Prunus rivularis|species|noshow=1|ver=161009}}, the {{vern|creek plum}} or [[hog plum]]
+#### ''[[Prunus subcordata]]'', the [[Klamath plum]] or [[Oregon plum]]
+### {{taxlink|Prunus sect. Armeniaca|section|noshow=1|ver=161009}} (better known as [[apricot]]s)
+#### ''[[Prunus mume]]'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
+## {{lb|en|now|rare}} A dried grape or [[raisin]], as used in a pudding or cake. {{defdate|from 17th c.}}
+# ''Extended senses.''
+## {{lb|en|now|rare|archaic}} One hundred thousand [[pound]]s; {{i|generally}} a [[fortune]]. {{defdate|from 18th c.}}
+##*'''1751''', {{w|Tobias Smollett}}, ''The Adventures of Peregrine Pickle'', I.1:
+##*:He {{...}} acquired a plentiful fortune, tho', to his infinite regret, he died before it amounted to a '''Plum''' {{...}}.
+## A [[desirable]] or choice thing of its kind; a prize selection; a choice appointment, assignment etc. {{defdate|from 19th c.}}
+##: ''The mayor rewarded his cronies with cushy '''plums''', requiring little work for handsome pay.''
+## A dark [[bluish]]-[[red]] [[color]]/[[colour]], the colour of some plums. {{defdate|from 19th c.}}
+##: {{color panel|5F4951}}
+##: {{color panel|web plum|CC99CC}}
+## {{lb|en|slang|usually|in the plural}} A [[testicle]]. {{defdate|from 20th c.}}
+## {{lb|en|pejorative|chiefly|UK}} A [[fool]], an [[idiot]].
 
 =====Synonyms=====
 * {{sense|tree}} {{l|en|plum tree}}, {{l|en|plumtree}}
