--- a/en/昏/昏.16951.wikitext
+++ b/en/昏/昏.16951.wikitext
@@ -31,7 +31,7 @@ From {{inh|zh|sit-pro|*s-mun||dark}}. Cognate with {{och-l|悶|bored; depressed}
 |md=
 |mn=hun/qz,tw,xm:hng/zz:huiⁿ
 |mn_note=hun - literary; hng/huiⁿ - vernacular
-|mn-t=hung1/heng1
+|mn-t=hung1/hng1/hên1
 |w=1hun
 |x=
 |mc=y
