--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -262,11 +262,13 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 ===Verb===
 {{en-verb|fleshes|fleshing|fleshed|fleshed}}
 
+# {{lb|en|transitive}} To [[reward]] (a hound, bird of prey etc.) with flesh of the animal killed, to excite it for further hunting; to [[train]] (an animal) to have an [[appetite]] for flesh.
+#*'''1751''', {{w|Tobias Smollett}}, ''The Adventures of Peregrine Pickle'', I.8:
+#*:Before they had '''fleshed''' the hounds, however, he recollected himself {{...}}.
 # {{lb|en|transitive}} To [[bury]] (something, especially a weapon) in flesh.
 #* {{quote-book|en|year=1933|author=Robert E. Howard|title=The Scarlet Citadel|passage=Give me a clean sword and a clean foe to '''flesh''' it in.}}
 # {{lb|en|obsolete}} To [[inure]] or [[habituate]] someone {{m|en|in}} or {{m|en|to}} a given practice. {{defdate|16th-18th c.}}
 #* {{RQ:Florio Montaigne Essayes|chapter=7|book=II|passage=And whosoever could now joyne us together, and eagerly '''flesh''' all our people to a common enterprise, we should make our ancient military name and chivalrous credit to flourish againe.}}
-# {{lb|en|transitive}} To [[train]] to an [[appetite]] for flesh, as [[dog]]s for [[hunting]].
 # {{lb|en|transitive}} To [[glut]].
 # {{lb|en|transitive}} To put flesh on; to [[fatten]].
 # To remove the flesh from the skin during the making of [[leather]].
