--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -270,6 +270,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 * Tagalog: {{t+|tl|halaga}}
 * Tajik: {{t|tg|қимат}}, {{t|tg|хазина}}
 * Thai: {{t-needed|th}}
+* Tocharian B: {{t|txb|pīto}}
 * Turkish: {{t+|tr|masraf}}
 * Tuvan: {{t|tyv|өртек}}
 * Ukrainian: {{t|uk|кошт|m}}, {{t+|uk|ва́ртість|f}}
