--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -155,6 +155,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Bengali: {{t|bn|বোধ করা|sc=Beng}}
 * Bulgarian: {{t+|bg|усе́щам|impf|sc=Cyrl}}, {{t+|bg|чу́вствам|impf|sc=Cyrl}}
 * Burmese: {{t+|my|ခံစား}}
+* Catalan: {{t+|ca|sentir}}
 * Chinese:
 *: Mandarin: {{t+|cmn|感到|tr=gǎndào|sc=Hani}}, {{t+|cmn|感覺|sc=Hani}}, {{t+|cmn|感觉|tr=gǎnjué|sc=Hani}}
 * Czech: {{t+|cs|cítit|impf}}
