--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -35,7 +35,7 @@ From {{der|en|ur|پایجامه|tr=pāyjāma}}/{{der|en|hi|पैजामा}},
 * Azerbaijani: {{t|az|pijama}}
 * Belarusian: {{t|be|піжа́ма|f|sc=Cyrl}}
 * Bengali: {{t|bn|পায়জামা}}
-* Bulgarian: {{t|bg|пижа́ма|f|sc=Cyrl}}, {{t|bg|но́щница|f|tr=nòštnica}}
+* Bulgarian: {{t|bg|пижа́ма|f|sc=Cyrl}}, {{t|bg|но́щница|f}}
 * Burmese: {{t-needed|my}}
 * Catalan: {{t+|ca|pijama|m}}
 * Chinese:
