--- a/en/偝/偝.11117.wikitext
+++ b/en/偝/偝.11117.wikitext
@@ -10,12 +10,12 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
 
 ===Glyph origin===
 {{Han etym}}
 
 ===Etymology 1===
+{{zh-forms}}
 
 ====Pronunciation====
 {{zh-pron
@@ -37,11 +37,12 @@
 * {{R:twedu|B00112}}
 
 ===Etymology 2===
+{{zh-forms|alt=鞅,負}}
 {{rfe|zh}}
 
 ====Pronunciation====
 {{zh-pron
-|mn=xm,tp,tc,hc,km:iāng/qz:ia̍hⁿ/qz:iahⁿ/tp,kh,tn,tc,hc,lk,sx,yl:āiⁿ/lk:iǎng/sx:āng/mg:chiāng
+|mn=xm,tp,tc,hc,km:iāng/qz:ia̍hⁿ/qz:iahⁿ/zz,tp,kh,tn,tc,hc,lk,sx,yl:āiⁿ/lk:iǎng/sx:āng/mg:chiāng
 |cat=v
 }}
 
