--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -126,10 +126,29 @@
 
 ==Korean==
 
-===Hanja===
-{{ko-hanja|우}}
+===Etymology===
+From {{der|ko|ltc|-}} {{ltc-l|偶|id=1|idol; pair}} and {{ltc-l|偶|id=2|by chance}}.
 
-# {{rfdef|ko|sort=人09}}
+===Hanja===
+{{ko-hanja-search}}
+{{ko-hanja|짝|우}}
+
+# {{hanja form of|우|[[idol]]; [[pair]]}}
+# {{hanja form of|우|[[by chance]]}}
+
+====Compounds====
+{{der-top|Compounds}}
+* {{ko-l|우상|偶像}}
+* {{ko-l|대우|對偶}}
+* {{ko-l|배우자|配偶者}}
+{{mid}}
+* {{ko-l|우연|偶然}}
+* {{ko-l|우발|偶發}}
+* {{ko-l|우이|偶爾}}
+{{der-bottom}}
+
+===References===
+* {{R:hanjadoc|436}}
 
 ----
 
