--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -21,7 +21,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 # A deep, [[rumble|rumbling]] noise resembling thunder.
 #: ''Off in the distance, he heard the '''thunder''' of hoofbeats, signalling a stampede.''
 # An alarming or startling [[threat]] or [[denunciation]].
-#* {{rfdatek|en|Prescott}}
+#* {{RQ:Prescott Peru}}
 #*: The '''thunders''' of the Vatican could no longer strike into the heart of princes.
 # {{lb|en|obsolete}} The [[discharge]] of [[electricity]]; a [[thunderbolt]].
 #* {{RQ:Shakespeare Lear|II|i|passage=The revenging gods / 'Gainst parricides did all their '''thunders''' bend.}}
