--- a/en/偵/偵.11141.wikitext
+++ b/en/偵/偵.11141.wikitext
@@ -64,10 +64,27 @@
 
 ==Korean==
 
-===Hanja===
-{{ko-hanja|정}}
+===Etymology===
+From {{der|ko|ltc|-}} {{ltc-l|偵|id=2}}.
 
-# {{rfdef|ko|sort=人09}}
+===Hanja===
+{{ko-hanja-search}}
+{{ko-hanja|염탐하다|염탐할|정}}
+
+# {{hanja form of|정|[[investigation]]; [[spy]]}}
+
+====Compounds====
+{{der-top3|Compounds}}
+* {{ko-l|정라|偵邏}}
+* {{ko-l|정찰|偵察}}
+* {{ko-l|정탐|偵探}}
+* {{ko-l|탐정|探偵}}
+* {{ko-l|밀정|密偵}}
+* {{ko-l|정객|偵客}}
+{{der-bottom}}
+
+===References===
+* {{R:hanjadoc|435}}
 
 ----
 
