/* Etymology */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <偵#60183986>

--- a/en/偵/偵.11141.wikitext
+++ b/en/偵/偵.11141.wikitext
@@ -65,7 +65,7 @@
 ==Korean==
 
 ===Etymology===
-From {{der|ko|ltc|-}} {{ltc-l|偵|id=2}}.
+From {{der|ko|ltc|-}} {{ltc-l|偵}}.
 
 ===Hanja===
 {{ko-hanja-search}}
