--- a/en/偦/偦.11126.wikitext
+++ b/en/偦/偦.11126.wikitext
@@ -37,4 +37,4 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[しょ]] (sho)|kun=[[とおる]] (tooru)}}
+* {{ja-readings|on=しょ|kun=とお-る}}
