--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -120,18 +120,19 @@
 From {{der|ko|ltc|-}} {{ltc-l|倭|id=2}}. {{hanja-hunmong|와|wa|人類#중04A}}
 
 ====Hanja====
+{{ko-hanja-search}}
 {{ko-hanja|왜나라|왜}}
 
 # {{hanja form of|왜|[[ancient]] [[Japan]], [[Yamato]]}}
 #* 樂浪海中有倭人, 分爲百餘國 &lt;漢書&gt; <ref>新字海, 民衆書林, 서울, 1967, p. 27.</ref>
 
 ====Compounds====
-{{top2}}
+{{der-top|Compounds}}
 * {{ko-l|왜국||[[ancient]] [[Japan]], [[Yamato]]; {{q|derogatory}} [[Japan]]|倭國}}
 * {{ko-l|왜색|{{q|derogatory}} [[Japanese]] [[style]]|倭色}}
 * {{ko-l|왜구|[[wokou]]|倭寇}}
 * {{ko-l|^임진왜란|[[w:Japanese invasions of Korea|Japanese invasions of Korea]]|壬辰倭亂}}
-{{bottom}}
+{{der-bottom}}
 
 ===Etymology 2===
 From {{der|ko|ltc|-}} {{ltc-l|倭|id=1}}.
