t+kw:[[kewsel]] t+kw:[[kowsel]] t+kw:[[kows]] ([[WT:EDIT|Assisted]]) <speak#60192856>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -149,6 +149,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 *: Min Dong: {{t|cdo|講}}, {{t|cdo|讲|tr=gōng}}
 *: Min Nan: {{t+|nan|講}}, {{t|nan|讲|tr=kóng}}
 *: Wu: {{t|wuu|講}}, {{t|wuu|讲|tr=kaan}}
+* Cornish: {{t+|kw|kewsel}} {{qualifier|Revived Middle Cornish}}, {{t|kw|kowsel}} {{qualifier|Revived Late Cornish}}, {{t|kw|kows}} {{qualifier|Revived Late Cornish}}
 * Corsican: {{t+|co|parlà}}
 * Crimean Tatar: {{t|crh|söyleşmek}}, {{t|crh|laf etmek}}, {{t|crh|aytmaq}}
 * Czech: {{t+|cs|mluvit|impf}}, {{t+|cs|hovořit|impf}}
