--- a/en/愚/愚.15662.wikitext
+++ b/en/愚/愚.15662.wikitext
@@ -54,6 +54,9 @@
 ===Compounds===
 {{zh-der|一得之愚|愚騃|愚呆|愚笨|愚不可及|愚蠢|愚弟|愚鈍|愚而好自用|愚夫|愚婦|愚公移山|愚見|愚陋|愚魯|愚昧|愚蒙|愚民|愚民政策|愚弄|愚懦|愚人|愚人節|愚者|愚頑|愚妄|愚兄|愚意|愚者一得|愚忠|愚拙|大智若愚|上愚|受愚|下愚|大愚不靈|愚迷|愚夯|愚直|愚眉肉眼|愚痴|愚氣|愚氓|愚戇|愚夫愚婦|愚劣|愚公谷|愚公|凡愚|愚孝|愚濫|使貪使愚|愚昧無知|下愚不移|愚懵|大智如愚|愚公之居|懦愚|振警愚頑|憃愚|疏慵愚鈍|肉眼愚晦|賢愚不分|至愚極陋|藏愚|非愚則誣|肉眼愚眉|鄉愚|愚化|愚臣}}
 
+===Derived terms===
+* {{desc|bor=1|th|โง่||ignorant; stupid; unintelligent}}
+
 ----
 
 ==Japanese==
