--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -98,6 +98,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |footbridge
 |Gorebridge
 |Guide Bridge
+|Haydon Bridge
 |Hebden Bridge
 |Helwith Bridge
 |Horns Bridge
