--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -54,7 +54,7 @@
 {{zh-der|健旺|南旺|喜氣旺色|持旺|暢旺|旺盛|打旺壯|旺月|旺銷|旺季|旺相|肝火旺|趙旺|興旺|見旺|陰虛火旺|脈旺|旺塘}}
 
 ===Pronunciation 2===
-{{zh-forms|alt=諹}}
+{{zh-forms|alt=諹,攘}}
 {{zh-pron
 |g=iong5
 |h=gd=iong4
