--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -20,13 +20,13 @@
 ----
 
 ==Chinese==
-{{zh-forms|alt=暀}}
 
 ===Glyph origin===
 {{Han etym}}
 {{Han compound|日|㞷|t1=sun|c1=s|c2=p|ls=psc|}}.
 
-===Pronunciation===
+===Pronunciation 1===
+{{zh-forms|alt=暀}}
 {{zh-pron
 |m=wàng
 |c=wong6
@@ -41,17 +41,33 @@
 |cat=
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # an [[occurrence]] bringing [[prosperity]] or [[wealth]]
-# {{lb|zh|Cantonese|dialectal Hakka|Pinghua}} [[bustling]]; [[filled]] with [[activity]]
+# {{lb|zh|Cantonese|Pinghua|dialectal Hakka}} [[bustling]]; [[filled]] with [[activity]]
 
 ====Synonyms====
 {{zh-dial|熱鬧}}
 
-====Compounds====
+=====Compounds=====
 {{zh-der|健旺|南旺|喜氣旺色|持旺|暢旺|旺盛|打旺壯|旺月|旺銷|旺季|旺相|肝火旺|趙旺|興旺|見旺|陰虛火旺|脈旺|旺塘}}
+
+===Pronunciation 2===
+{{zh-forms|alt=諹,攘,穰}}
+{{zh-pron
+|g=iong5
+|h=gd=iong4
+|cat=a
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{lb|zh|Hakka|Gan}} [[bustling]]; [[filled]] with [[activity]]
+
+=====Synonyms=====
+{{zh-dial|熱鬧}}
 
 ----
 
