--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -194,6 +194,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Tatar: {{t+|tt|табарга|sc=Cyrl}}
 * Thai: {{t+|th|พบ}}, {{t+|th|เจอ}}
 * Tibetan: {{t|bo|བརྙེས}}, {{t|bo|བརྙེས་གནང}} {{qualifier|honorific}}
+* Tocharian B: {{t|txb|kälp-}}
 * Turkish: {{t+|tr|bulmak}}
 * Turkmen: {{t|tk|tapmak}}
 * Tuvan: {{t|tyv|тывар}}
