--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -44,7 +44,7 @@ From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from 
 #: {{uxi|en|The quicksilver on a mirror may '''creep'''.}}
 # To move or behave with [[servility]] or [[exaggerate]]d [[humility]]; to [[fawn#Verb|fawn]].
 #: {{uxi|en|A '''creeping''' sycophant.}}
-#: {{RQ:Shakespeare Troilus|III|iii|passage=To come as humbly as they used to '''creep''' / To holy altars.}}
+#* {{RQ:Shakespeare Troilus|III|iii|passage=To come as humbly as they used to '''creep''' / To holy altars.}}
 # To have a sensation as of insects creeping on the skin of the body; to crawl.
 #: {{uxi|en|The sight made my flesh '''creep'''.}}
 # To drag in deep water with [[creeper]]s, as for recovering a submarine cable.
