--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -69,7 +69,7 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 * Russian: {{t+|ru|льнуть}}, {{t+|ru|прилипа́ть}}, {{t+|ru|цепля́ться}}
 * Sanskrit: {{t|sa|श्लिष्यति}}, {{t+|sa|स्निह्यति}}
 * Spanish: {{t+|es|sostener}}, {{t+|es|aferrar|alt=aferrarse}}, {{t+|es|sujetar}}, {{t+|es|agarrar|alt=agarrarse}}
-* Tocharian B: {{t|txb|trenk-}}
+* Tocharian B: {{t|txb|trenk-}}, {{t|txb|tsu-}}
 * Vietnamese: {{t+|vi|bám}}
 {{trans-bottom}}
 
