--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -92,7 +92,7 @@ Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 
 # {{zh-div|朝}} {{w|Ming dynasty}}
 # {{surname|zh|dot=,}} listed as #111 on the ''[[:w:Baijiaxing|Baijiaxing]]''
 # {{zh-div|母}} {{lb|zh|Chinese linguistics}} the [[Middle Chinese]] [[initial]] of {{ltc-l|明}}
-# [[Akira]] {{gl|a Japanese male given name}}
+# {{rfd-sense|zh}} [[Akira]] {{gl|a Japanese male given name}}
 
 ====See also====
 {{zh-Chinese dynasties}}
