--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -90,7 +90,7 @@ Proto-{{w|Kiranti languages|Kiranti}} {{m|und|*saŋ||star}} either develops from
 ====Definitions====
 {{zh-hanzi}}
 
-# {{rfd-sense|zh}} [[Hoshi]] {{gl|a Japanese surname}}
+# [[Hoshi]] {{gl|a Japanese surname}}
 
 {{zh-cat|Astronomy|Musical instruments|Japanese surnames}}
 
