--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -5,6 +5,8 @@
 ===Etymology 1===
 {{PIE root|en|gʷem}}
 From {{inh|en|enm|comen}}, {{m|enm|cumen}}, from {{inh|en|ang|coman}}, {{m|ang|cuman||to come, go, happen}}, from {{inh|en|gem-pro|*kwemaną||to come}}, from {{inh|en|ine-pro|*gʷem-||to step}}.
+{{rfe|en|Where does the masturbation sense come from?}}
+
 {{rel-top|cognates}}
 Cognate from Proto-Germanic with {{cog|sco|cum||to come}}, {{cog|stq|kuume||to come}}, {{cog|fy|komme||to come}}, {{cog|nds|kamen||to come}}, {{cog|nl|komen||to come}}, {{cog|de|kommen||to come}}, {{cog|nb|-}} and {{cog|da|komme||to come}}, {{cog|sv|komma||to come}}, {{cog|nn|-}} and {{cog|is|koma||to come}}.
 
