t+nod:[[ᩍᩈᩕᩣᩑᩃ]] ([[WT:EDIT|Assisted]]) <Israel#60289876>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -150,6 +150,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * Neapolitan: {{t|nap|Isdraele}}
 * Nepali: {{t|ne|इजरायल}}
 * Norman: {{t|nrf|Israël|m}}
+* Northern Thai: {{t|nod|ᩍᩈᩕᩣᩑᩃ}}
 * Norwegian:
 *: Bokmål: {{t+|nb|Israel}}
 *: Nynorsk: {{t+|nn|Israel}}
