--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -202,8 +202,8 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 # {{lb|en|baseball}} The number of [[balls]] and [[strikes]], respectively, on a batter's in-progress [[plate appearance]].
 #: {{ux|en|He has a 3–2 '''count''' with the bases loaded.}}
 # {{lb|en|obsolete}} An object of interest or account; value; estimation.
-#* {{rfdatek|en|Spenser}}
-#*: all his care and '''count'''
+#* {{RQ:Spenser FQ|5|10|stanza=16}}
+#*: When he was readie to his steede to mount<br>Vnto his way, which now was all his care and '''count'''.
 
 =====Derived terms=====
 {{rel-top3|Terms derived from ''count'' (noun)}}
