--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -11,7 +11,9 @@
 <!-- 1 syllable words !-->
 
 ===Etymology 1===
-From {{inh|en|enm|fighten}}, from {{inh|en|ang|feohtan||to fight, combat, strive}}, from {{inh|en|gem-pro|*fehtaną||to comb, tease, shear, struggle with}}, from {{der|en|ine-pro|*peḱ-||to comb, shear}}. Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||to fight}}, {{cog|nl|vechten||to fight}}, {{cog|nds|fechten||to fight}}, {{cog|de|fechten||to fight, fence}}, {{cog|sv|fäkta||to fence, to fight (using blade weapons), to wave vigorously (and carelessly) with one's arms}}, {{cog|la|pectō||comb, thrash|pos=verb}}, {{cog|sq|pjek||to hit, strive, fight}}, {{cog|grc|πέκω||comb or card wool|pos=verb}}. Related also to {{cog|ang|feht||wool, shaggy pelt, fleece}}.
+From {{inh|en|enm|fighten}}, from {{inh|en|ang|feohtan||to fight, combat, strive}}, from {{inh|en|gmw-pro|*fehtan}}, from {{inh|en|gem-pro|*fehtaną||to comb, tease, shear, struggle with}}, from {{der|en|ine-pro|*peḱ-||to comb, shear}}. 
+
+Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||to fight}}, {{cog|nl|vechten||to fight}}, {{cog|nds|fechten||to fight}}, {{cog|de|fechten||to fight, fence}}, {{cog|sv|fäkta||to fence, to fight (using blade weapons), to wave vigorously (and carelessly) with one's arms}}, {{cog|la|pectō||comb, thrash|pos=verb}}, {{cog|sq|pjek||to hit, strive, fight}}, {{cog|grc|πέκω||comb or card wool|pos=verb}}. Related also to {{cog|ang|feht||wool, shaggy pelt, fleece}}.
 
 ====Verb====
 {{en-verb|fights|fighting|fought|fought|past_ptc2=foughten|past_ptc2_qual=archaic}}
