--- a/en/惢/惢.15607.wikitext
+++ b/en/惢/惢.15607.wikitext
@@ -51,7 +51,7 @@
 # {{rfdef|ja|sort=心08}}
 
 ====Readings====
-* {{ja-readings|on=さ,すい,ずい,に|kun=うたがう}}
+* {{ja-readings|on=さ,すい,ずい,に|kun=うたがう, こころごころ}}
 
 ----
 
