/* Korean */ ety split <偶#60335578>

--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -127,26 +127,32 @@
 
 ==Korean==
 
-===Etymology===
-; “idol; pair”
-: From {{der|ko|ltc|-}} {{ltc-l|偶|id=1|idol; pair}}
+===Etymology 1===
+From {{der|ko|ltc|-}} {{ltc-l|偶|id=1|idol; pair}}.
 
-; “by chance”
-: From {{der|ko|ltc|-}} {{ltc-l|偶|id=2|by chance}}.
-
-===Hanja===
+====Hanja====
 {{ko-hanja-search}}
 {{ko-hanja|짝|우}}
 
 # {{hanja form of|우|[[idol]]; [[pair]]}}
-# {{hanja form of|우|[[by chance]]}}
 
 ====Compounds====
-{{der-top|Compounds}}
+{{der-top3|Compounds}}
 * {{ko-l|우상|偶像}}
 * {{ko-l|대우|對偶}}
 * {{ko-l|배우자|配偶者}}
-{{mid}}
+{{der-bottom}}
+
+===Etymology 2===
+From {{der|ko|ltc|-}} {{ltc-l|偶|id=2|by chance}}.
+
+====Hanja====
+{{ko-hanja|마침|우}}
+
+# {{hanja form of|우|[[by chance]]}}
+
+====Compounds====
+{{der-top3|Compounds}}
 * {{ko-l|우연|偶然}}
 * {{ko-l|우발|偶發}}
 * {{ko-l|우이|偶爾}}
