--- a/en/旻/旻.16931.wikitext
+++ b/en/旻/旻.16931.wikitext
@@ -29,7 +29,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# (poetic) the [[sky]]; [[Heaven]]
 
 ===Compounds===
 {{zh-der|召旻|小旻|旻天|旻寧|旻序|蒼旻}}
