--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -242,6 +242,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|érez}}, {{t|hu|[[az]] [[az]] [[érzése]] [[van]]}}
 * Japanese: {{t+|ja|思う|tr=おもう, omou}}
+* Korean: {{t|ko|ᆯ 것 같다}}
 * Latin: {{t+|la|sentio}}
 * Norman: {{t|nrf|senti}}
 * Norwegian: {{t+|no|føle}}
