--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -176,7 +176,11 @@ From {{der|ja|ltc|sort=い|-}} {{ltc-l|易|id=1}}.
 ==Korean==
 
 ===Etymology 1===
-From {{der|ko|ltc|-}} {{ltc-l|易|id=2}}. {{hanja-hunmong|억|ek|儒學#상34A}}
+From {{der|ko|ltc|-}} {{ltc-l|易|id=2}}. 
+
+{{hanja-hunmong|억|ek|儒學#상34A}} 
+
+{{hanja-sinjeung|역|yek}}
 
 ====Hanja====
 {{ko-hanja-search}}
@@ -195,7 +199,7 @@ From {{der|ko|ltc|-}} {{ltc-l|易|id=2}}. {{hanja-hunmong|억|ek|儒學#상34A}}
 {{der-bottom}}
 
 ===Etymology 2===
-From {{der|ko|ltc|-}} {{ltc-l|易|id=1}}.
+From {{der|ko|ltc|-}} {{ltc-l|易|id=1}}. {{hanja-sinjeung|이|i}}
 
 ====Hanja====
 {{ko-hanja|쉽다|쉬울|이}}
