--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -215,7 +215,7 @@ From {{der|ko|ltc|-}} {{ltc-l|惡|id=3}}. {{hanja-hunmong|악〮|ak|雜語}}
 {{der-bottom}}
 
 ===Etymology 2===
-From {{der|ko|ltc|-}} {{ltc-l|惡|id=2}}.
+From {{der|ko|ltc|-}} {{ltc-l|惡|id=2}}. {{hanja-sinjeung|오|wo}}
 
 ====Hanja====
 {{ko-hanja|[[미워하다|미워할]]|오}}
