--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -292,6 +292,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Pashto: {{t+|ps|پل|tr=pul}}
 * Pennsylvania German: {{t|pdc|Brick|f}}
 * Persian: {{t+|fa|پل|tr=pol}}
+* Plautdietsch: {{t|pdt|Brigj|f}}
 * Polish: {{t+|pl|most|m}}
 * Portuguese: {{t+|pt|ponte|f}}
 * Punjabi: {{t|pa|ਪੁਲ}}
