--- a/en/偌/偌.11100.wikitext
+++ b/en/偌/偌.11100.wikitext
@@ -134,3 +134,8 @@ Contraction of {{zh-l|*若夥}} ({{zh-ref|Mei, 2015}}). Compare Fuzhou {{cog|cdo
 {{ko-hanja|hangeul=야|rv=ya|mr=ya}}
 
 # {{rfdef|ko|sort=人09}}
+
+----
+
+==Vietnamese==
+# nhược, nhước
