/* English */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <cut#60394047>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -675,8 +675,8 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 #: {{ux|en|Look at this '''cut''' on my finger!}}
 # A notch, passage, or channel made by cutting or digging; a furrow; a groove.
 #: {{ux|en|a '''cut''' for a railroad}}
-#* {{rfdatek|en|Knolles}}
-#*: This great '''cut''' or ditch Secostris {{...}} purposed to have made a great deal wider and deeper.
+#* {{RQ:Knolles Turk}}
+#*: which great '''cut''' or ditch Sesostris {{...}} purposed to have made a great deale wider and deeper.
 ## An artificial [[navigation]] as distinguished from a [[navigable]] river
 # A [[share]] or [[portion]].
 #: {{ux|en|The lawyer took a '''cut''' of the profits.}}
