--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -21,6 +21,9 @@
 {{Han etym}}
 {{Han compound|日|乍|c1=s|c2=p|t1=sun|ls=psc}}.
 
+===Etymology===
+Related to {{och-l|昔|the past}} ({{zh-ref|Sagart, 1999}}).
+
 ===Pronunciation===
 {{zh-pron
 |m=zuó
