--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -264,6 +264,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Japanese: {{t+|ja|部門|tr=ぶもん, bumon|sc=Jpan}}, {{t|ja|支店|tr=してん, shiten|sc=Jpan}}, {{t|ja|支社|tr=ししゃ, shisha|sc=Jpan}}
 {{trans-mid}}
 * Korean: {{t+|ko|지점}} ({{t+|ko|支店}}), {{t+|ko|지사}} ({{t+|ko|支社}})
+* Nepali: {{t|ne|शाखा}}
 * Persian: {{t+|fa|شعبه|tr=šobe|sc=fa-Arab}}
 * Polish: {{t+|pl|oddział}}, {{t+|pl|filia}}
 * Portuguese: {{t+|pt|filial|f}}, {{t+|pt|departamento|m}}, {{t+|pt|divisão|f}}, {{t+|pt|repartição|f}}
