--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -37,17 +37,16 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# [[false]]; [[counterfeit]]; [[bogus]]; [[fake]]
+# [[false]]; [[counterfeit]]; [[bogus]]; [[fake]]; [[pseudo-]]
 #: {{zh-x|虛偽|hypocritical; hypocrisy}}
 #: {{zh-x|偽造|to forge; to counterfeit}}
 #: {{zh-x|偽鈔|counterfeit banknote}}
+#: {{zh-x|偽麻黃鹼|'''pseudo'''ephedrine}}
 # [[falsehood]]; [[untruthfulness]]
 # [[illegal]]; [[illegitimate]]
 #: {{zh-x|偽政權|puppet government}}
 #: {{zh-x|^偽--^滿洲國|Manchukuo}}
 #: {{zh-x|^偽 ^北京 ^大學|the {{w|Peking University}} under the control of Chinese puppet state of the Empire of Japan}}
-# [[pseudo-]]
-#: {{zh-x|偽麻黃鹼|pseudoephedrine}}
 
 ===Compounds===
 {{zh-der|偽鈔|偽軍|偽君子|偽劣|偽麻黃鹼|偽善|偽飾|偽書|偽託|偽造|偽證|偽政府|偽譔|偽裝|偽足|偽作|虛偽|乘偽行詐|作偽|偽品|偽國|偽幣|偽政權|偽本|偽滿洲國|偽組織|偽經|偽藥|偽裝滲透|偽造文書|別裁偽體|去偽存真|情偽|真偽|真偽莫辨|矯言偽行|矯飾偽行|詐偽|邪偽|飾偽|偽科學}}
