--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -59,6 +59,7 @@ Colloquial form of the departing-tone variant of {{ltc-l|作|to do|id=2}}, to di
 # {{lb|zh|euphemism}} to [[make love]]
 
 ====Synonyms====
+{{zh-dial|肏}}
 * {{sense|to do}} {{zh-l|辦}}, {{zh-l|幹}}, {{zh-l|搞}}, {{zh-l|整治}}, {{zh-l|作}}
 
 ===Compounds===
