--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -147,7 +147,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Haitian Creole: {{t|ht|vant}}
 * Hawaiian: {{t|haw|ʻōpū}}
 * Hebrew: {{t+|he|קיבה|f|tr=kevá|alt=קיבה \ קֵבָה}}
-* Hindi: {{t|hi|अमाशय|m|sc=Deva}}, {{t+|hi|पेट|m}}, {{t+|hi|उदर|m}}
+* Hindi: {{t|hi|अमाशय|m|sc=Deva}}, {{t|hi|पेट|m}}, {{t+|hi|उदर|m}}
 * Hungarian: {{t+|hu|gyomor}}
 * Icelandic: {{t+|is|magi|m}}
 * Ido: {{t+|io|stomako}}
@@ -193,7 +193,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Middle Persian: {{t|pal|𐭪𐭥𐭬𐭡|ts=kumb}}, {{t|pal|𐭪𐭥𐭬𐭩𐭪𐭩|ts=kumīg}}
 * Mongolian: {{t+|mn|гэдэс}}
 * Navajo: {{t|nv|abid|sc=Latn}}
-* Nepali: {{t-needed|ne}}
+* Nepali: {{t|ne|पेट}}
 * Norman: {{t|nrf|estonma|m}} {{qualifier|Jersey}}, {{t|nrf|estouma|m}} {{qualifier|Guernsey}}, {{t|nrf|estuma|m}} {{qualifier|Sark}}
 * Northern Sami: {{t|se|čoavji}}
 * Norwegian:
