--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -389,7 +389,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 * Belarusian: {{t|be|пра́ма}}, {{t|be|про́ста}}
 * Bulgarian: {{t+|bg|напра́во}}
 * Chinese:
-*" Mandarin: {{t+|cmn|一直|tr=yīzhí}}
+*: Mandarin: {{t+|cmn|一直|tr=yīzhí}}
 * Czech: {{t+|cs|přímo}}
 * Dutch: {{t+|nl|rechtdoor}}
 * Finnish: {{t+|fi|suoraan}}
