combined Cantonese, Mandarin under Chinese; /*Chinese*/added zh-forms, zh-pron <垉#60472103>

--- a/en/垉/垉.13068.wikitext
+++ b/en/垉/垉.13068.wikitext
@@ -9,14 +9,24 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[paau4]]|y=paau4}}
+===Pronunciation===
+{{zh-pron
+|m=páo,tóng
+|c=paau4
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{rfdef|yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
+# {{rfdef|zh|sort=土05}}
+
+===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 
 ----
@@ -35,15 +45,6 @@
 |kanyoon=ほう<はう
 |kun=くず-る, くず-れる, くず-れ
 }}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[páo]] ([[pao2]]), [[tóng]] ([[tong2]])|wg=p'ao<sup>2</sup>, t'ung<sup>2</sup>}}
-
-# {{rfdef|cmn|sort=土05}}
 
 ----
 
