--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -16,7 +16,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 {{en-verb}}
 
 # {{lb|en|intransitive}} To [[regurgitate]] or eject the contents of the [[stomach]] through the mouth; [[puke]].
-#* {{rfdate|en}} Bible, Jonah ii. 10
+#* {{RQ:KJV|Jonah|2|10}}
 #*: The fish {{...}} '''vomited''' out Jonah upon the dry land.
 # {{lb|en|transitive}} To [[regurgitate]] and discharge (something swallowed); to [[spew]].
 #* '''1988''', {{w|Angela Carter}}, ‘Peter Carey: ''Oscar and Lucinda''’, in ''Shaking a Leg'', Vintage 2013, p. 713:
