--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -8,7 +8,7 @@
 {{Han char|rn=72|rad=日|as=05|sn=9|four=60801|canj=AMYO|ids=⿱日𤴓}}
 
 ====Derived characters====
-* {{l|mul|[[匙]], [[堤]], [[提]], [[湜]], [[題]]}}
+* {{l|mul|[[匙]], [[堤]], [[提]], [[湜]], [[題]]}} 
 
 ====References====
 * {{Han ref|kx=0493.260|dkj=13859|dj=0858.060|hdz=21497.050|uh=662F|ud=26159|bh=AC4F|bd=44111}}
@@ -75,7 +75,7 @@ Originally a {{Han compound|早|止|ls=psc|c1=s|c2=p|nocap=1}}, but the original
 #* {{zh-x|不是|fault; mistake; wrongdoing}}
 #* {{zh-x|你 說 得{de} 是|What you said is '''right'''}}
 #* {{zh-x|各 行 其 是|to have each going his own way, i.e., doing what he considers '''right'''}}
-#* {{zh-x|共 商 國 是|to discuss national affairs}} (This is a fossil word from Ancient Chinese where {{och-l|是}} originally means "what is right (for the country)", i.e., "laws and policies")
+#* {{zh-x|共 商 國 是|to discuss national affairs}} (This is a fossil word from Ancient Chinese where {{och-l|是}} originally means "what is right (for the country)", i.e., "laws and policies") "shi" may also mean a conformation like "yes, true" 
 # {{surname|zh}}
 
 ====Usage notes====
