--- a/en/傔/傔.11174.wikitext
+++ b/en/傔/傔.11174.wikitext
@@ -44,7 +44,7 @@
 # {{rfdef|ja|sort=人10}}
 
 ====Readings====
-* {{ja-readings|on=[[けん]] (ken)|kun=[[したがう]] (shitagau), [[はべる]] (haberu), [[つかえる]] (tsukaeru)}}
+* {{ja-readings|on=けん|kun=したが-う, はべ-る, つか-える}}
 
 ----
 
