/* Translations */ Adding Tagalog "konde" <count#60740745>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -376,8 +376,8 @@ Borrowed from {{bor|en|xno|conte}} and {{bor|en|fro|comte||count}}, from {{der|e
 * Ido: {{t+|io|komto}}
 * Irish: {{t|ga|cunta|m}}, {{t|ga|cuntaí|m-p}}
 * Italian: {{t+|it|conte}}
-{{trans-mid}}
 * Japanese: {{t+|ja|伯爵|tr=はくしゃく, hakushaku}}
+{{trans-mid}}
 * Khmer: {{t+|km|ព្រះ|tr=preah}}
 * Latin: {{t|la|comes|m}}
 * Latvian: {{t|lv|grāfs|m}}
@@ -402,6 +402,7 @@ Borrowed from {{bor|en|xno|conte}} and {{bor|en|fro|comte||count}}, from {{der|e
 * Slovene: {{t+|sl|grof|m}}
 * Spanish: {{t+|es|conde|m}}
 * Swedish: {{t+|sv|greve}}
+* Tagalog: {{t+|tl|konde}}
 * Thai: {{t|th|เคานต์}}
 * Turkish: {{t+|tr|kont|m}}
 * Vietnamese: {{t+|vi|bá tước}}
