/* Noun */ christmas creep? <creep#60741746>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -158,7 +158,10 @@ From the above verb.
 # A relatively small gradual change, variation or deviation (from a planned value) in a measure.
 # A slight displacement of an object: the slight movement of something
 # {{lb|en|uncountable}} The gradual expansion or proliferation of something beyond its original goals or boundaries, considered negatively.
-#: ''Christmas '''creep'''. Feature '''creep'''. Instruction '''creep'''. Mission '''creep''' ''
+#: {{ux|en|christmas '''creep'''}}
+#: {{ux|en|feature '''creep'''}}
+#: {{ux|en|instruction '''creep'''}}
+#: {{ux|en|mission '''creep'''}}
 # {{lb|en|publishing}} In sewn books, the tendency of [[page]]s on the inside of a [[quire]] to stand out farther than those on the outside of it.
 # {{lb|en|materials science}} An increase in [[strain]] with time; the gradual [[flow]] or [[deformation]] of a material under [[stress]].
 # {{lb|en|geology}} The [[imperceptible]] [[downslope]] movement of surface [[rock]].
