/* Middle English */ <et cetera#60851002>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -83,6 +83,29 @@ Borrowed from {{bor|enm|la|et cetera}}.
 
 ----
 
+==Polish==
+
+===Alternative forms===
+* {{q|abbreviated}} {{l|pl|etc.}}
+
+===Etymology===
+From {{bor|pl|la|et cētera}}.
+
+===Pronunciation===
+* {{pl-IPA|/et ˈcetera/}}
+
+===Phrase===
+{{head|pl|phrase|head=[[et]] [[cetera]]}}
+
+# {{l|en|and so on}}
+#: {{syn|pl|i tak dalej}}
+
+===Further reading===
+* {{R:pl:WSJP}}
+* {{R:PWN}}
+
+----
+
 ==Portuguese==
 
 ===Phrase===
