--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -239,6 +239,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Czech: {{t|cs|pokládat za}}
 * Danish: {{t+|da|finde}}
 * Dutch: {{t+|nl|vinden}}, {{t|nl|van mening zijn|alt=van mening zijn dat}}
+* Egyptian: {{t-egy|gmj|h=gm-m}}
 * Finnish: {{t+|fi|pitää}}
 * French: {{t+|fr|trouver}}
 * Galician: {{t+|gl|coidar}}
