/* See also */ <thunder#60865395>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -301,6 +301,9 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * {{l|en|ceraunomancy}}
 * {{l|en|lightning}}
 
+====Descendants====
+* {{desc|tl|tanda}}
+
 ===Verb===
 {{en-verb}}
 
