/* Chinese */ added Glyph origin <昞#60889698>

--- a/en/昞/昞.16966.wikitext
+++ b/en/昞/昞.16966.wikitext
@@ -15,29 +15,20 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han etym}}
+
 ===Pronunciation===
 {{zh-pron
 |m=bǐng,pèi
-|m-s=
-|dg=
 |c=bing2, fong2
-|c-t=
-|g=
-|h=pfs=
-|j=
-|mb=
-|md=
-|mn=
-|mn-t=
-|w=
-|x=
 |mc=y
 |oc=y
-|cat=n
+|cat=
 }}
 
 ===Definitions===
-{{head|zh|Han character}}
+{{zh-hanzi}}
 
 # {{rfdef|zh}}
 
