--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -182,6 +182,9 @@ From {{der|ko|ltc|-}} {{ltc-l|易|id=2}}.
 
 {{hanja-sinjeung|역|yek}}
 
+====Pronunciation====
+{{ko-hanja-pron|역|jʌ̹k̚}}
+
 ====Hanja====
 {{ko-hanja-search}}
 {{ko-hanja|바꾸다|바꿀|역}}
@@ -202,6 +205,9 @@ From {{der|ko|ltc|-}} {{ltc-l|易|id=2}}.
 From {{der|ko|ltc|-}} {{ltc-l|易|id=1}}. 
 
 {{hanja-sinjeung|이|i}}
+
+====Pronunciation====
+{{ko-hanja-pron|이|iː|alt=ː}}
 
 ====Hanja====
 {{ko-hanja|쉽다|쉬울|이}}
