--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -28,7 +28,9 @@ The pictographic protoform of {{zh-l|*螾}} was borrowed to represent "period of
 {{zh-pron
 |m=xún
 |c=ceon4
+|h=pfs=sùn
 |mn=sûn
+|x=sen2
 |mc=y
 |oc=y
 |cat=n
