t+dng:[[чүнзы]] t+ku:[[damen]] t+nan:[[裙]] t-balance t+wuu:[[裙]] ([[WT:EDIT|Assisted]]) <skirt#60906039>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -88,7 +88,10 @@
 * Chickasaw: {{t|cic|naafka' tapa'}}
 * Chinese:
 *: Cantonese: {{t|yue|裙|tr=kwan4|sc=Hani}}
+*: Dungan: {{t|dng|чүнзы}}
 *: Mandarin: {{t+|cmn|裙子|tr=qúnzi|sc=Hani}}, {{t+|cmn|裙|tr=qún|sc=Hani}}
+*: Min Nan: {{t+|nan|裙|tr=kûn}}
+*: Wu: {{t|wuu|裙|tr=jjyn}}
 * Czech: {{t+|cs|sukně|f}}
 * Danish: {{t|da|nederdel|c}}, {{t+|da|skørt|n}}
 * Dutch: {{t+|nl|rok|m}}
@@ -116,11 +119,13 @@
 * Kazakh: {{t+|kk|юбка}}
 * Khmer: {{t+|km|សំពត់}}
 * Korean: {{t+|ko|치마}}, {{t+|ko|스커트}}
+* Kurdish:
+*: Kurmanji: {{t+|ku|damen}}
 * Kyrgyz: {{t+|ky|юбка}}
 * Lao: {{t|lo|ສິ້ນ}}, {{t+|lo|ກະໂປງ}}
+{{trans-mid}}
 * Latgalian: {{t|ltg|snuotine}}
 * Latvian: {{t|lv|svārki|m-p}}
-{{trans-mid}}
 * Lithuanian: {{t|lt|sijonas|m}}
 * Luxembourgish: {{t|lb|Jupe|f}}
 * Macedonian: {{t|mk|здолниште|n}}, {{t|mk|здолница|f}}, {{t|mk|сукња|f}} {{qualifier|colloquial}}
