--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -181,13 +181,18 @@ Probably related to etymologies 1 and 2 ({{zh-ref|Xiang, 2019}}). Alternatively,
 ===Etymology 1===
 From {{der|ko|ltc|-}} {{ltc-l|惡|id=3}}. 
 
-{{hanja-dongguk|ᅙᅡᆨ〮|qak}}
+{{collapse|
+* {{hanja-dongguk|ᅙᅡᆨ〮|qák}}
+* {{hanja-hunmong|악〮|ák|雜語}}
+|Historical readings
+|bg=#FFFFFF}}
 
-{{hanja-hunmong|악〮|ak|雜語}}
+====Pronunciation====
+{{ko-hanja-pron|악|a̠k̚}}
 
 ====Hanja====
 {{ko-hanja-search}}
-{{ko-hanja|[[악하다|악할]]|악}}
+{{ko-hanja|악하다|악할|악}}
 
 # {{hanja form of|악|[[evil]]}}
 
@@ -222,12 +227,17 @@ From {{der|ko|ltc|-}} {{ltc-l|惡|id=3}}.
 ===Etymology 2===
 From {{der|ko|ltc|-}} {{ltc-l|惡|id=2}}. 
 
-{{hanja-dongguk|ᅙᅩᆼ〮|qwo}}
+{{collapse|
+* {{hanja-dongguk|ᅙᅩᆼ〮|qwó}}
+* {{hanja-sinjeung|오|wo}}
+|Historical readings
+|bg=#FFFFFF}}
 
-{{hanja-sinjeung|오|wo}}
+====Pronunciation====
+{{ko-hanja-pron|오|o̞}}
 
 ====Hanja====
-{{ko-hanja|[[미워하다|미워할]]|오}}
+{{ko-hanja|미워하다|미워할|오}}
 
 # {{hanja form of|오|[[hatred]]}}
 
