--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -46,6 +46,9 @@ Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||
 # {{lb|en|intransitive}} Of colours or other design elements: to [[clash]]; to fail to [[harmonize]].
 #* {{quote-book|en|year=2013|author=Ian G. Clifton|title=Android User Interface Design|passage=The higher the saturation, the more the colors '''fight''', and the more users will be looking at your design instead of your content.}}
 
+=====Conjugation=====
+{{en-conj|fight|fought}}
+
 =====Synonyms=====
 * See also [[Thesaurus:fight]]
 
