t+mk:[[новозеландски]] t+sl:[[novozelandski]] t+hy:[[նորզելանդական]] t-balance t+ka:[[ახალზელანდიური]] ([[WT:EDIT|Assisted]]) <New Zealand#60953646>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -186,13 +186,16 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 
 {{trans-top|attributive form - relating to New Zealand}}
 * Arabic: {{t|ar|نْيُوزِيلَنْدِيّ‎}}
+* Armenian: {{t+|hy|նորզելանդական}}
 * Belarusian: {{t|be|новазела́ндскі}}, {{t|be|новазэля́ндскі}} {{qualifier|Taraškievica}}
 * Bulgarian: {{t|bg|новозела́ндски}}
 * Czech: {{t+|cs|novozélandský}}
 * Danish: {{t+|da|newzealandsk}}
 * Dutch: {{t+|nl|Nieuw-Zeelands}}
 * French: {{t+|fr|néo-zélandais}}
+* Georgian: {{t|ka|ახალზელანდიური}}
 * German: {{t+|de|neuseeländisch}}
+* Macedonian: {{t|mk|новозеландски}}
 * Norwegian:
 *: Bokmål: {{t|nb|newzealandsk}}, {{t|nb|nyzealandsk}}
 *: Nynorsk: {{t|nn|newzealandsk}}, {{t|nn|nyzealandsk}}
@@ -206,6 +209,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 *: Cyrillic: {{t|sh|новозѐландскӣ}}
 *: Roman: {{t+|sh|novozèlandskī}}
 * Slovak: {{t|sk|novozélandský}}
+* Slovene: {{t|sl|novozelandski}}
 * Swedish: {{t+|sv|nyzeeländsk}}
 * Ukrainian: {{t|uk|новозела́ндський}}
 {{trans-bottom}}
