t+el:[[νεοζηλανδικός]] t-balance ([[WT:EDIT|Assisted]]) <New Zealand#60953670>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -195,6 +195,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * French: {{t+|fr|néo-zélandais}}
 * Georgian: {{t|ka|ახალზელანდიური}}
 * German: {{t+|de|neuseeländisch}}
+* Greek: {{t+|el|νεοζηλανδικός}}
 * Macedonian: {{t|mk|новозеландски}}
 * Norwegian:
 *: Bokmål: {{t|nb|newzealandsk}}, {{t|nb|nyzealandsk}}
