--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -30,6 +30,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 #* '''1920''', [[w:Peter B. Kyne|Peter B. Kyne]], ''The Understanding Heart'', Chapter II:
 #*: {{quote|en|As far to the west as Monica could see, her world was a sea of fog, {{...}}. Above it arched a cerulean sky; as the sun climbed to the '''zenith''', {{...}}, the fog gradually took on a bluish tinge.}}
 # {{lb|en|by extension}} Highest point or [[state]]; [[peak]].
+#: {{ux|en|Winning the continental championship was the '''zenith''' of my career.}}
 #: {{syn|en|acme|apogee|culmination|pinnacle}}
 #* {{RQ:Shakespeare Tempest|I|ii|passage=I find my '''zenith''' doth depend upon / A most auspicious star.}}
 #* {{RQ:Macaulay History|13|It was during those civil troubles {{...}} this aspiring family reached the '''zenith'''.}}
