/* Translations */ Added Plautdietsch translation. <olive#60966277>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -119,6 +119,7 @@ From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}
 * Old English: {{t|ang|eleberġe|f}}
 * Pashto: {{t+|ps|زيتون|m|tr=zaytún}}
 * Persian: {{t+|fa|زیتون|tr=zeytun}}
+* Plautdietsch: {{t|pdt|Oliew|f}}
 * Polish: {{t+|pl|oliwka}}
 * Portuguese: {{t+|pt|azeitona|f}}, {{t+|pt|oliva|f}}
 * Punjabi: {{t|pa|ਜੈਤੂਨ}}
