--- a/en/偈/偈.11096.wikitext
+++ b/en/偈/偈.11096.wikitext
@@ -60,6 +60,7 @@
 # {{lb|zh|literary}} [[brave]]
 
 ===Etymology 3===
+{{zh-wp|yue}}
 Borrowed from {{bor|yue|en|gear}}.
 
 ====Pronunciation====
@@ -75,7 +76,7 @@ Borrowed from {{bor|yue|en|gear}}.
 # {{lb|zh|figurative}} [[body]]; [[health]] {{zh-mw|副}}
 
 ====Compounds====
-{{zh-der|偈油|爆偈}}
+{{zh-der|偈油|大偈|爆偈}}
 
 ===Etymology 4===
 
